fix: aligned and removed space in datepicker

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -10,12 +10,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 599px;
+  width: 559px;
   padding: 10px;
   background-color: white;
   position: absolute;
   left: 0;
   top: 380px;
+  margin-top: -2rem;
 }
 
 .search > input {
@@ -26,6 +27,7 @@
   height: 30px;
   top: 420px;
   border: none;
+  margin-top: -2rem;
 }
 
 .search > input:focus {
@@ -39,7 +41,8 @@
   text-transform: inherit !important;
   background-color: #ff7779;
   color: white;
-  width: 570px;
+  width: 579px;
+  margin-top: -2rem;
 }
 
 .search > button:hover {
